# SafeWalk-SF

./: .env.example  .gitignore  App.tsx  Database.md  README.md  extract_data.py  index.html  main.py  metadata.json  package.json  pnpm-lock.yaml  pyproject.toml  types.ts
components/: MapComponent.tsx  RouteCard.tsx
safesf_agent/: __init__.py  agent.py  config.py  server.py
safesf_agent/prompts/: data_agent.txt  location_resolver.txt  orchestrator.txt  summary_agent.txt
safesf_agent/tools/: __init__.py  snowleopard_tool.py
safesf_agent/utils/: __init__.py  event_emitter.py  flow_tracker.py
services/: geminiService.ts
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  page.tsx
web/app/agents/: page.tsx
web/components/: AgentFlow.tsx  CategoryHeatMaps.tsx  ChatInput.tsx  ResultsView.tsx  SafetyMap.tsx  SafetyScoreCard.tsx  SidePanel.tsx  TabBar.tsx
web/components/nodes/: SafetyAgentNode.tsx
web/hooks/: useSafeSFWebSocket.ts
web/lib/cache/: index.ts  player.ts  recorder.ts  storage.ts  types.ts
web/store/: agentStore.ts
web/types/: agent.ts  leaflet.heat.d.ts
